--- a/demo/src/main/resources/com/assignment/soldierArrangement.fxml
+++ b/demo/src/main/resources/com/assignment/soldierArrangement.fxml
@@ -2,26 +2,74 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.HierarchyController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.SoldierArrangementController">
    <children>
-      <AnchorPane layoutX="288.0" minHeight="0.0" minWidth="0.0" prefHeight="720.0" prefWidth="980.0" AnchorPane.rightAnchor="0.0">
+      <AnchorPane layoutX="288.0" minHeight="0.0" minWidth="0.0" prefHeight="650.0" prefWidth="980.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Label fx:id="title" prefHeight="45.0" prefWidth="742.0" text="Soldier Arrangement" textFill="#46252a" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="10.0">
+            <Label fx:id="title" prefHeight="45.0" prefWidth="742.0" text="Soldier Arrangement" textFill="#46252a" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                <font>
                   <Font name="System Bold" size="30.0" />
                </font>
                <padding>
-                  <Insets bottom="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="20.0" right="10.0" top="20.0" />
                </padding>
             </Label>
+            <RadioButton fx:id="sortGeneralRButton" layoutX="245.0" layoutY="86.0" mnemonicParsing="false" onAction="#showOperation" selected="true" text="Sort Generals" textFill="#46252a" AnchorPane.leftAnchor="245.0">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+               <toggleGroup>
+                  <ToggleGroup fx:id="generalRButton" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton fx:id="suggestGeneralRButton" layoutX="425.0" layoutY="85.0" mnemonicParsing="false" onAction="#showOperation" text="Suggest Generals" textFill="#46252a" toggleGroup="$generalRButton" AnchorPane.leftAnchor="425.0">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </RadioButton>
+            <RadioButton fx:id="searchGeneralRButton" layoutX="635.0" layoutY="86.0" mnemonicParsing="false" onAction="#showOperation" text="Search Generals" textFill="#46252a" toggleGroup="$generalRButton" AnchorPane.leftAnchor="635.0">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </RadioButton>
+            <Label layoutX="62.0" layoutY="85.0" text="Choose a operation:" textFill="#46252a" AnchorPane.leftAnchor="60.0">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <ChoiceBox fx:id="attributeChoiceBox" layoutX="245.0" layoutY="130.0" prefHeight="33.0" prefWidth="160.0" />
+            <Label fx:id="attributeLabel" layoutX="8.0" layoutY="133.0" text="Choose a attribute to sort:" textFill="#46252a" AnchorPane.leftAnchor="8.0">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Button layoutX="757.0" layoutY="544.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#submit" prefHeight="72.0" prefWidth="180.0" text="Submit" textFill="#46252a" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Button>
+            <Label fx:id="resultLabel" alignment="TOP_LEFT" layoutX="460.0" layoutY="128.0" prefHeight="413.0" prefWidth="469.0" text="Results will be shown here.&#10;" textFill="#46252a" AnchorPane.leftAnchor="460.0" AnchorPane.rightAnchor="51.0">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="attributeLabel1" layoutX="18.0" layoutY="190.0" text="Choose a minimum level:" textFill="#46252a">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <ChoiceBox fx:id="minimumLevelChoiceBox" layoutX="245.0" layoutY="187.0" prefHeight="33.0" prefWidth="160.0" />
          </children>
       </AnchorPane>
-      <VBox fx:id="buttonVBox" alignment="CENTER" layoutX="-2.0" layoutY="-3.0" prefHeight="720.0" prefWidth="300.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox fx:id="buttonVBox" alignment="CENTER" layoutX="-2.0" layoutY="-3.0" prefHeight="720.0" prefWidth="300.0" spacing="20.0" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="11.0">
          <children>
             <Button focusTraversable="false" mnemonicParsing="false" onAction="#switchToHierarchyScene" prefHeight="65.0" prefWidth="240.0" text="Hierachy of Wu Kingdom" textAlignment="CENTER" textFill="#46252a" wrapText="true">
                <font>
