--- a/demo/src/main/resources/com/assignment/style.css
+++ b/demo/src/main/resources/com/assignment/style.css
@@ -5,7 +5,7 @@
 }
 
 .root {
-    -fx-background-image: url("background.jpg");
+    -fx-background-image: url("background/background.jpg");
     -fx-background-repeat: stretch;
     -fx-background-size: cover;
     -fx-background-position: center center;
