--- a/demo/src/main/resources/com/assignment/borrowingArrow.fxml
+++ b/demo/src/main/resources/com/assignment/borrowingArrow.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -65,11 +66,6 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="frontTextField" layoutX="113.0" layoutY="146.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="146.0">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </TextField>
             <Label fx:id="frontLabel" alignment="CENTER_RIGHT" layoutX="50.0" layoutY="151.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="60.0" text="Front: " textFill="#46252a" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="151.0">
                <font>
                   <Font name="System Bold" size="18.0" />
@@ -90,17 +86,22 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
+            <TextField fx:id="frontTextField" layoutX="113.0" layoutY="146.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="146.0">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </TextField>
             <TextField fx:id="leftTextField" layoutX="113.0" layoutY="199.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="199.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </TextField>
-            <TextField fx:id="backTextField" layoutX="113.0" layoutY="301.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="301.0">
+            <TextField fx:id="rightTextField" layoutX="113.0" layoutY="251.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="251.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </TextField>
-            <TextField fx:id="rightTextField" layoutX="113.0" layoutY="251.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="251.0">
+            <TextField fx:id="backTextField" layoutX="113.0" layoutY="301.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="301.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -139,6 +140,11 @@
                   <Insets bottom="20.0" top="20.0" />
                </padding>
             </Label>
+            <RadioButton fx:id="advancedModeRButton" layoutX="309.0" layoutY="146.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="35.0" prefWidth="215.0" text="Advanced mode:" textFill="#46252a">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </RadioButton>
          </children>
       </AnchorPane>
    </children>
